# promptique

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/examples/: README.txt
docs/examples/setup-config/: terminalizer.yml  vhs.casette
examples/: order-pyzza.py  py-skeleton.py  setup-config.py
src/promptique/: __init__.py  _base.py  _compat.py  _input.py  _keyboard.py  _utils.py  keyboard.py  keys.py  menu.py  renderer.py  theme.py  types.py  validation.py
src/promptique/prompts/: __init__.py  info.py  input.py  select.py
tests/: test_keyboard.py  test_utils.py
